# py-canal

./: .gitmodules  .pre-commit-config.yaml  Dockerfile  pyproject.toml  readme.md  taskfile.yaml  value.json
.github/: renovate.json
.github/workflows/: ci.yaml  lint.yaml  release-docker.yaml  release.yaml  test.yaml
app/: clean_cache.py  config.py  db.py  kafka.py  main.py  model.py
app/wiki_date/: __init__.py  __main__.py  extract_date.py  extract_date_test.py  refresh.py
etc/: base.dockerfile
