[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
# dependencies
pymemcache = "4.0.0"
msgspec = "0.18.6"
bgm-tv-wiki = "0.0.29"
sqlalchemy = "2.0.36"
pymysql = "1.1.1"
pyyaml = "6.0.2"
sslog = "0.0.0a51"
confluent-kafka = "2.6.1"

[tool.poetry.group.dev.dependencies]
tqdm = "4.67.0"
# linter and formatter
pre-commit = "==4.0.1"
mypy = "==1.11.2"
pytest = "8.3.3"
pytest-github-actions-annotate-failures = "0.2.0"
types-pyyaml = "^6.0.12.20240917"

[tool.poetry.group.dev.dependencies.confluent-kafka-stubs]
git = 'https://gitlab.com/Trim21/confluent-kafka-stubs.git'
branch = 'main'

[tool.poetry-plugin-bump]
commit_msg = 'bump: v{version}'

[tool.coverage.run]
concurrency = ['thread', 'greenlet']

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if TYPE_CHECKING:',
    'if __name__ == "__main__":',
    'raise NotImplementedError'
]

[tool.pytest.ini_options]
addopts = '-rav'

[tool.mypy]
strict = true
warn_no_return = false
check_untyped_defs = true
warn_return_any = false
explicit_package_bases = true
ignore_missing_imports = true

[tool.black]
target_version = ['py310']
extend-exclude = 'vendor'

[tool.ruff]
target-version = "py310"
extend-exclude = [".venv", "api", "vendor"]

[tool.ruff.lint]
extend-select = ['I']

[tool.ruff.lint.isort]
length-sort = true
lines-after-imports = 2
