[project]
name = "project"
version = "0"
requires-python = "~=3.10.16"
dependencies = [
    'msgspec == 0.18.6',
    'sslog == 0.0.0a51',
    'pymemcache == 4.0.0',
    'bgm-tv-wiki == 0.0.29',
    'sqlalchemy == 2.0.36',
    'pymysql == 1.1.1',
    'pyyaml == 6.0.2',
    'confluent-kafka ==2.8.0',
]

[dependency-groups]
dev = [
    'tqdm == 4.67.1',
    # linter and formatter
    'pre-commit ==4.1.0',
    'mypy ==1.15.0',
    'pytest == 8.3.3',
    'pytest-github-actions-annotate-failures ==0.3.0',
    'types-pyyaml ==6.0.12.20241230',
    'types-confluent-kafka == 1.3.1',
]

[tool.uv]
package = false

[tool.coverage.run]
concurrency = ['thread', 'greenlet']

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if TYPE_CHECKING:',
    'if __name__ == "__main__":',
    'raise NotImplementedError'
]

[tool.pytest.ini_options]
addopts = '-rav'

[tool.mypy]
strict = true
warn_no_return = false
check_untyped_defs = true
warn_return_any = false
explicit_package_bases = true
ignore_missing_imports = true

[tool.black]
target-version = ['py310']
extend-exclude = 'vendor'

[tool.ruff]
target-version = "py310"
extend-exclude = [".venv", "api", "vendor"]

[tool.ruff.lint]
extend-select = ['I']

[tool.ruff.lint.isort]
length-sort = true
lines-after-imports = 2
